js262/test/language/expressions/assignmenttargettype/direct-primaryexpression-literal-boolean.js


/*---
description: PrimaryExpression Literal BooleanLiteral; Return invalid. (Direct assignment)
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Direct assignment
---*/

$DONOTEVALUATE();

true = 1;
